# openGLES_learn

./: README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  LogUtils.h  native-lib.cpp
app/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
app/src/main/cpp/widget/: GLSampleBase.h  TriangleSample.cpp  TriangleSample.h
app/src/main/java/com/example/opengldemo/: MainActivity.java
app/src/main/java/com/example/opengldemo/render/: MyGLRender.java  MyNativeRender.java
app/src/main/java/com/example/opengldemo/widget/: MyGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
